feat: x-auth-flow header to specify web authentication
this is done to get refreshToken as http-only cookie for web auth
